add sns mail adress

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 ACCOUNTID=your_aws_account_id
 SB_USERNAME=your_stable_diffusion_username
 SB_PASSWORD=your_stable_diffusion_password
+SNS_MAIL=your_email_address
